updated resource type from int to uuid
