# models/portfolio.py
@@ -16,18 +16,18 @@ class PortfolioModel(db.Model):
     transactions = db.relationship('TransactionModel', lazy='dynamic')
 
     @classmethod
-    def find_by_id(cls, _id: int) -> "PortfolioModel":
+    def find_by_id(cls, _id: uuid) -> "PortfolioModel":
         return cls.query.filter_by(id=_id).first()
 
     @classmethod
-    def find_by_name(cls, user_id: str, portfolio_name: str) -> "PortfolioModel":
+    def find_by_name(cls, user_id: uuid, portfolio_name: str) -> "PortfolioModel":
         return cls.query.filter_by(user_id=user_id, portfolio_name=portfolio_name).first()
 
     def save_to_db(self) -> None:
         db.session.add(self)
         db.session.commit()
 
-    def delete_from_db(self, _id: int) -> None:
+    def delete_from_db(self, _id: uuid) -> None:
         db.session.delete(self)
         db.session.commit()
 
